Made Effort Console compatible with refactor changes to Definitions, Log/EffortLog/DefectLog classes